--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
 </font>
   <hr>
 </div>
- <center> <h1> Notícias </h1> </center>
- <div style="display: flex;">
- 
+
+ <center> <font color="black"><h1> Notícias </h1> </center></font>
+
+<div style="display: flex;">
 
   <figure>
   <a href="blog (abandono).html"><img src="abandono 2.jpg" width="350"> </a>
@@ -80,8 +81,9 @@
   <figure>
   <a href="blog (enem).html"> <img src="mari.jpeg" width="350"> </a>
   <center><figcaption> <a href="blog (enem).html" style="text-decoration: none; color: black;"> Resultados do Enem 2024 </a> </figcaption> </center>
- </figure>
+ </figure> </div>
 
+<div style="display: flex;">
  <figure>
   <a href="blog (etapas).html"><img src="etapas 1.jpeg" width="350"> </a>
   <center><figcaption> <a href="blog (etapas).html" style="text-decoration: none; color: black;"> Etapas da Educação </a> </figcaption> </center>
