--- a/blog (abandono).html
+++ b/blog (abandono).html
@@ -28,7 +28,7 @@
   
    <hr>
 
- <center ><img src="abandono 1.webp" width="500"> </center>
+ <center ><img src="abandono 2.jpg" width="500"> </center>
 
 <font size="4" >
 <p style="text-align: justify;"> O abandono escolar no Brasil tem se consolidado como um dos problemas mais graves e persistentes da educação nacional. Dados recentes do Censo 2022 revelam um cenário alarmante: quase 70 milhões de brasileiros com 18 anos ou mais estão fora da escola ou não concluíram a educação básica. Paralelamente, números divulgados pela OCDE mostram que um em cada quatro jovens de 18 a 24 anos não trabalham nem estudam, o que agrava a preocupação sobre o futuro profissional e social dessa geração.</p>
