--- a/index.html
+++ b/index.html
@@ -49,24 +49,9 @@
     para ajudar a construir uma escola mais participativa e comprometida com a qualidade da educação. </center>
   </p>
 
-  <!-- ===== FORMULÁRIO DE CONTATO ===== -->
-  <!-- A tag <form> agrupa todos os campos de entrada -->
-  
- <center> <font size="5"> <form action="#" method="post">
+<center><font size="6"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeVqed8d0VLvE9S4zfgDaqxrScCgPjbaRfVNEWS8uhpfo7lBQ/viewform?usp=sharing&ouid=114813399271519384845"> Compartilhe aqui </a> </font> </center>
 
-    <!-- Campo Nome -->
-    <label for="nome">Nome:</label><br>
-    <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required><br><br>
-
-    <!-- Campo Mensagem -->
-    <label for="mensagem">Sugestão:</label><br>
-    <textarea id="mensagem" name="mensagem" rows="5" cols="40" placeholder="Escreva sua mensagem" required></textarea><br><br>
-</form>
-    <!-- Botão de Enviar -->
-    <input type="submit" value="Enviar">
-  </form> </center>
-</font>
-  <hr>
+ <br> <hr>
 </div>
 
  <center> <font color="black"><h1> Notícias </h1> </center></font>
@@ -74,7 +59,7 @@
 <div style="display: flex;">
 
   <figure>
-  <a href="blog (abandono).html"><img src="abandono 2.jpg" width="350"> </a>
+  <a href="blog (abandono).html"><img src="abandono 1.webp" width="350"> </a>
   <center><figcaption> <a href="blog (abandono).html" style="text-decoration: none; color: black;"> Avanço do Abandono Escolar </a> </figcaption> </center>
  </figure>
 
