--- a/index.html
+++ b/index.html
@@ -60,22 +60,38 @@
 
   <figure>
   <a href="blog (abandono).html"><img src="abandono 1.webp" width="350"> </a>
+<font size="2" color="grey">
+  <p>14/11/2025 · 3 min de leitura</p>
+  </font>
+  </center>
   <center><figcaption> <a href="blog (abandono).html" style="text-decoration: none; color: black;"> Avanço do Abandono Escolar </a> </figcaption> </center>
  </figure>
 
   <figure>
   <a href="blog (enem).html"> <img src="mari.jpeg" width="350"> </a>
+<font size="2" color="grey">
+  <p>14/11/2025 · 2 min de leitura</p>
+  </font>
+  </center>
   <center><figcaption> <a href="blog (enem).html" style="text-decoration: none; color: black;"> Resultados do Enem 2024 </a> </figcaption> </center>
  </figure> </div>
 
 <div style="display: flex;">
  <figure>
   <a href="blog (etapas).html"><img src="etapas 1.jpeg" width="350"> </a>
+<font size="2" color="grey">
+  <p>14/11/2025 · 3 min de leitura</p>
+  </font>
+  </center>
   <center><figcaption> <a href="blog (etapas).html" style="text-decoration: none; color: black;"> Etapas da Educação </a> </figcaption> </center>
  </figure>
 
  <figure>
   <a href="blog (educação).html"><img src="educação 1.jpg" width="350"> </a>
+<font size="2" color="grey">
+  <p>14/11/2025 · 2 min de leitura</p>
+  </font>
+  </center>
   <center><figcaption> <a href="blog (educação).html" style="text-decoration: none; color: black;"> Falta de Educação Agrava Desigualdades</a> </figcaption> </center>
  </figure>
   </div>
