--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br><br><br><br><br><br><br>
   
-  <!-- Título do blog -->
+ 
    <center>
    <font face="arial" size="5" color="white">
   <h1> EducaNews </h1>
   
     
-  <!-- Subtítulo introdutório -->
+  
   <font size="4" color="white">
   <p>A influência da educação na sociedade brasileira.</p>
   </center>
@@ -35,15 +35,15 @@
     <hr>
  
 
-  <!-- Seção: Arte Antiga -->
-   
+  
+   <br> <br><br><br><br><br><br><br><br>
   <center><h1><font size="8" face="Gothan" color="white">Uma Escola que Escuta</h1> </font> </center> 
   <font color="white"
   <p style="text-align: justify;"> A educação é um dos pilares fundamentais para o desenvolvimento individual e coletivo de uma sociedade. Por meio dela, o ser humano adquire conhecimentos, valores, habilidades e atitudes que possibilitam sua formação crítica, ética e cidadã. É válido ressaltar que a educação não se limita à instrução ou à transmissão de conhecimento, pois compreende também o desenvolvimento da autonomia e do senso crítico, aprimorando habilidades e competências. Para Freud, há um momento decisivo na vida do ser humano: é o da descoberta advinda da vontade de saber. Como afirma Kupfer (1990), na sua tese “O saber sobre o desejo de saber”, resta saber como o desejo e o saber inconsciente estão presentes e geram efeitos no interior de uma relação pedagógica, pois é possível pressentir que ambos se fazem escutar como espécie de música, decidindo os destinos de troca de saberes e informação. Não temos dúvidas de que o desejo de aprender é estruturante para a prática educativa, e é na escola que essa vontade se materializa, onde o aluno busca saber o que não se sabe. Sendo assim, esse ambiente precisa ser de efervescente criação e descoberta, e bordar a curiosidade da criança no processo de aprendizagem exige uma atuação efetiva no cerne da ação educativa.</p>
 
 <p style="text-align: justify;">A escola, na figura do professor, organiza os espaços, tempos e materiais, promovendo a paixão e a escuta, pois dessa forma é dada a oportunidade às crianças de se defrontarem com a busca, a incompletude, o objeto para sempre perdido, a criação e a curiosidade. É necessário que se tenha um ideal firme e creia no seu próprio sonho para torná-lo real; em qualquer situação, a motivação e a paixão de aprender ou de saber são orientadas para a abertura do querer. Quando as crianças se sentem capazes de serem diferentes com o que aprendem, sentem-se também competentes e confiantes com os ganhos que estão tendo e com as coisas novas que são capazes de aprender, passando a ter não somente uma nova visão do ato de aprender, como também uma nova visão de si mesmas. Sentir-se capaz é, de certa forma, sentir-se bem consigo, fazendo com que nossos comportamentos possam ser modificados e o mundo seja visto de outra forma, mais positiva. Para isso, a opinião dos alunos é fundamental para o desenvolvimento de uma escola cada vez melhor. Cada estudante vivencia o dia a dia da instituição, observa práticas pedagógicas, espaços de convivência e serviços oferecidos, e tem experiências únicas que podem contribuir para melhorias. Ao conhecer os pontos positivos e negativos percebidos pelos alunos, a direção e os professores podem tomar decisões mais alinhadas às necessidades reais da comunidade escolar, aprimorando a gestão, a infraestrutura, o aprendizado e o bem-estar de todos.</p>
   </p>
-
+<br>
  <center> <p>
     Este espaço foi criado como uma oportunidade para que você possa compartilhar suas ideias e sugestões <br> 
     para ajudar a construir uma escola mais participativa e comprometida com a qualidade da educação. </center>
@@ -51,7 +51,7 @@
 
 <center><font size="6"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeVqed8d0VLvE9S4zfgDaqxrScCgPjbaRfVNEWS8uhpfo7lBQ/viewform?usp=sharing&ouid=114813399271519384845"> Compartilhe aqui </a> </font> </center>
 
- <br> <hr>
+<br><br><br><br><br><br><br><br><br> <hr>
 </div>
 
  <center> <font color="black"><h1> Notícias </h1> </center></font>
@@ -60,10 +60,10 @@
 
   <figure>
   <a href="blog (abandono).html"><img src="abandono 1.webp" width="350"> </a>
-<font size="2" color="grey">
-  <p>14/11/2025 · 3 min de leitura</p>
-  </font>
+    <font size="2" color="grey">
+  <p> 14/11/2025 · 3 min de leitura </p>
   </center>
+</font>
   <center><figcaption> <a href="blog (abandono).html" style="text-decoration: none; color: black;"> Avanço do Abandono Escolar </a> </figcaption> </center>
  </figure>
 
@@ -74,38 +74,69 @@
   </font>
   </center>
   <center><figcaption> <a href="blog (enem).html" style="text-decoration: none; color: black;"> Resultados do Enem 2024 </a> </figcaption> </center>
- </figure> </div>
+ </figure> 
 
-<div style="display: flex;">
+
  <figure>
   <a href="blog (etapas).html"><img src="etapas 1.jpeg" width="350"> </a>
-<font size="2" color="grey">
+   <font size="2" color="grey">
   <p>14/11/2025 · 3 min de leitura</p>
-  </font>
-  </center>
+  </font></center>
   <center><figcaption> <a href="blog (etapas).html" style="text-decoration: none; color: black;"> Etapas da Educação </a> </figcaption> </center>
  </figure>
 
  <figure>
   <a href="blog (educação).html"><img src="educação 1.jpg" width="350"> </a>
-<font size="2" color="grey">
-  <p>14/11/2025 · 2 min de leitura</p>
+  <font size="2" color="grey">
+  <p>14/11/2025 · 2 min de leitura </p>
   </font>
-  </center>
   <center><figcaption> <a href="blog (educação).html" style="text-decoration: none; color: black;"> Falta de Educação Agrava Desigualdades</a> </figcaption> </center>
  </figure>
   </div>
   
   <hr>
-  
-
- 
-
-  <!-- Rodapé simples -->
    <center><font color="grey">
   <p>© 2025 EducaNews</p>
   </center>
   </font>
+
+
+
+ <div style="width: 50%; text-align: justify;">
+    <h2> Sobre nós</h2>
+    
+  </div>
+
+  <div style="width: 50%; text-align: justify;">
+    Texto da direita...
+  </div>
+
+
+
+
+<center><font color="grey"><form action="#" method="post">
+<h4> Contato </h4>
+    <!-- Campo Nome -->
+    <label for="nome"> Nome: </label><br>
+    <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required><br><br>
+
+    <!-- Campo Telefone -->
+    <label for="telefone"> Telefone: </label><br>
+    <input type="tel" id="telefone" name="telefone" placeholder="(11) 91234-5678"><br><br>
+
+    <!-- Campo Email -->
+    <label for="email"> E-mail:</label><br>
+    <input type="email" id="email" name="email" placeholder="seuemail@exemplo.com" required><br><br>
+
+    <!-- Campo Mensagem -->
+    <label for="mensagem">Dúvidas:</label><br>
+    <textarea id="mensagem" name="mensagem" rows="5" cols="40" placeholder="Deixe sua dúvida" required></textarea><br><br>
+
+    <!-- Botão de Enviar -->
+    <input type="submit" value="Enviar">
+  </form> </center></font>
+
+  
   </font>
 
 </body>
