--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <!-- Botão de Enviar -->
     <input type="submit" value="Enviar">
-  </form> </center></font>
+  </form> </center></font> <br>
   <!-- Rodapé simples -->
    <center><font color="grey">
   <p>© 2025 EducaNews</p>
